--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,7 +4,7 @@
     --main-font: 'Inter';
     --main-font-size: 18px;
     --additional-font: 'PressStart2P';
-    --margin-inline-container: 25.6vw;
+    --margin-inline-container: 25.8%;
     --font-weight-700: 700;
     --button-accent-color: #fff;
     --heart-accent-color: #f00;
